fixing a logo issue Ragebro found part two. The issue was the width of the outside div

--- a/plonetheme/diazo_responsivetheme/theme/css/mediaqueries.css
+++ b/plonetheme/diazo_responsivetheme/theme/css/mediaqueries.css
@@ -245,6 +245,7 @@
         position: absolute;
         top: 15px !important;
         display: inline-block;
+        width: 60%;
         }
    #portal-logo {
        clear: both !important;
