checking in since I figured out how to get to the javascript variables

--- a/plonetheme/diazo_responsivetheme/theme/css/mediaqueries.css
+++ b/plonetheme/diazo_responsivetheme/theme/css/mediaqueries.css
@@ -190,6 +190,7 @@
     }
     
     div#portal-columns { width: 99%; }
+    #visual-portal-wrapper { width: 99% !important;}
  
 } /*  * END 600px and below  * */
 
